--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Software Engineer's Adventure in Robot Land</title>
+    <title>A Software Engineer's Journey into Robotics</title>
     <style>
         /* Styles for the body to remove default margins */
         body {
@@ -40,10 +40,13 @@
 <body>
 <div class="container">
 
-<h1>A Software Engineer's Adventure in Robot Land</h1>
+<h1>A Software Engineer's Journey into Robotics</h1>
 
 <i><p style="color: #0b5394;">06/18/2025</p></i>
-<p>I know coding. But robots have always been a mystery to me. That started to change in April 2025 after I built a pair of so100s. For the first time I had a real robot to play with. In the 2.5 months that followed, I tinkered, experimented, and built demos I could only dream of at the start of April. I felt like being pulled into a rabbit hole and came out on robot land.
+<p>I know coding. But robots have always been a mystery to me. That started to change in April after I built the first robot arm that I have ever touched. In the months that followed, I tinkered with it one project after another. And before long I found myself building demos I could have only dreamed of before April. 
+</p>
+<p>How is this possible? It's possible because robotics is undergoing a ground shift at the moment. And LeRobot, through its low cost open source project, made it possible for anyone with coding skills to experience this shift themselves. I am grateful for having embarked on this journey. 
+It's one of the greatest learning experiences for me. And I share it with you here 
 </p>
 
 <p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
@@ -150,14 +153,16 @@ Below is another zero-shot demo where Gemini figured out "a point in front of Ke
 </div>
 
 <p>
-Robotics was hard. As a software engineer generalist, I used to get very amused watching pre-AI era robots playing soccer. They were spectacularly clumsy. But things are changing fast. Now impressive robot demos pop up every day on Internet. My long dreamed cloth folding robot has become a reality a while ago as demoed by Physical Intelligence, the company behind Pi0.
+Robotics was hard. I used to find it quite amusing to watch pre-AI era robots playing soccer. They were spectacularly clumsy. But things are changing fast. Impressive robot demos now pop up every day on Internet. 
+    
+All terain robot dogs, dancig humanoids, cloth folding, picnic packing, kitchen cleaning, ..., you name it.
 </p>
 <p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops and offices, helping perform all kinds of useful tasks. As I worked on these projects during the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
 
 <h3>A final note</h3>
 <p>
-I'd like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
+I'd really like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's truely a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
 And the end of this blog is certainly not the end of my robotics journey. It rather marks the start of the journey - there are so many more great ideas waiting to be explored in this wonderland.
