--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ All terain robot dogs, dancig humanoids, cloth folding, picnic packing, kitchen 
 I'd really like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's truely a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
-And the end of this blog is certainly not the end of my robotics journey. It rather marks the start of the journey - there are so many more great ideas waiting to be explored in this wonderland.
+And the end of this blog is certainly not the end of my robotics journey. It rather marks the start of the journey - there are so many more great ideas waiting to be explored.
 
 </div>
 </body>
