--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 <i><p style="color: #0b5394;">06/18/2025</p></i>
 <p>I know coding. But robots have always been a mystery to me. That started to change in April after I built the first robot arm that I have ever touched. In the months that followed, I tinkered with it one project after another. And before long I found myself building demos I could have only dreamed of before April. 
 </p>
-<p>How is this possible? It's possible because robotics is undergoing a ground shift at the moment. And LeRobot, through its low cost open source project, made it possible for anyone with coding skills to experience this shift themselves. I am grateful for having embarked on this journey. 
-It's one of the greatest learning experiences for me. And I share it with you here 
+<p>How is this possible? It's possible because robotics is going through a ground shift at the moment. And LeRobot, through its low cost open source project, made it possible for anyone with coding skills to experience this shift themselves. I am grateful for having embarked on the journey. 
+It's one of the greatest learning experiences for me. And I want to share it with you here 
 </p>
-
+    
+<h3>The journey</h3>
 <p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
 </p>
 <div class="video-container">
