--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         h1 {
             color: #0b5394;
         }
-
+        
+        h3 {
+            color: #0b5394;
+        }
         p {
             line-height: 1.6;
             color: #555;
