--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <i><p style="color: #0b5394;">06/18/2025</p></i>
 <p>I know coding. But robots have always been a mystery to me. That started to change in April after I built the first robot arm that I have ever touched. In the months that followed, I tinkered with it one project after another. And before long I found myself building demos I could have only dreamed of before April. 
 </p>
-<p>How is this possible? Robotics is going through a ground shift at the moment. Things that were impossible a few years ago become easy. And LeRobot, through its low cost open source project, made it possible for anyone with coding skills to experience this great shift themselves. I am grateful for having embarked on the journey. 
+<p>How is this possible? Robotics is going through a ground shift at the moment. Things that were almost impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a>, through its low cost open source project, made it possible for anyone with coding skills to experience this great shift themselves. I am grateful for having embarked on the journey. 
 It's one of the greatest learning experiences for me. And I want to share it with you here 
 </p>
     
