--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             color: #0b5394;
         }
         
-        h3 {
+        h2 {
             color: #0b5394;
         }
         p {
@@ -49,10 +49,10 @@
 <p>I know coding. But robots have always been a mystery to me. That started to change in April after I built the first robot arm that I have ever touched. In the months that followed, I tinkered with it one project after another. And before long I found myself building demos I could have only dreamed of before April. 
 </p>
 <p>How is this possible? Robotics is going through a ground shift at the moment. Things that were almost impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a>, through its low cost open source project, made it possible for anyone with coding skills to experience this great shift themselves. I am grateful for having embarked on the journey. 
-It's one of the greatest learning experiences for me. And I want to share it with you here 
+It's one of the greatest learning experiences for me. And I want to share it with you here.
 </p>
     
-<h3>The journey</h3>
+<h2>The journey starts</h2>
 <p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
 </p>
 <div class="video-container">
@@ -164,7 +164,7 @@ All terain robot dogs, dancig humanoids, cloth folding, picnic packing, kitchen 
 <p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops and offices, helping perform all kinds of useful tasks. As I worked on these projects during the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
 
-<h3>A final note</h3>
+<h2>The journey continues/h2>
 <p>
 I'd really like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's truely a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
