--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Agentic and autonomous robots are always facinating especially if you combine lo
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/6FK6Pl8VYmI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>I didnt bother to train a locomotion model. I simply asked gemini to go around in a specific order to find legos.</i>
+<i>The model was almost the same as the previous one except cameras were mounted on lekiwi, which enabled lekiwi to roam. And I didnt bother to train a locomotion model. I simply asked gemini to go around in a specific order to find legos.</i>
 <p>
 Seeing the success of bbox, I started to wonder whether images, which are the standard input to VLA, are really necessary in the presence of bbox? Could models do away with them? That led to the development of "Blind ACT".
 </p>
