--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ All terain robot dogs, dancig humanoids, cloth folding, picnic packing, kitchen 
 <p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops and offices, helping perform all kinds of useful tasks. As I worked on these projects during the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
 
-<h2>The journey continues/h2>
+<h2>The journey continues</h2>
 <p>
 I'd really like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's truely a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
