--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@ Below is another zero-shot demo where Gemini figured out "a point in front of Ke
 </div>
 
 <p>
-Robotics was hard. I used to find it quite amusing to watch pre-AI era robots playing soccer. They were spectacularly clumsy. But things are changing fast. Impressive robot demos now pop up every day on Internet. 
+Robotics was hard. I used to find it quite amusing watching pre-AI era robots playing soccer. They were epic clumsy. But things are changing fast. Impressive robot demos now pop up every day on Internet. 
     
-All terain robot dogs, dancig humanoids, cloth folding, picnic packing, kitchen cleaning, ..., you name it.
+Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain dogs, dancig humanoids, you name it.
 </p>
 <p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops and offices, helping perform all kinds of useful tasks. As I worked on these projects during the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
