--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <i><p style="color: #0b5394;">06/18/2025</p></i>
 <p>I know coding. But robots have always been a mystery to me. That started to change in April after I built the first robot arm that I have ever had my hands on. In the months that followed, I tinkered with it one project after another. And before long I found myself building demos I could have only dreamed of before April. 
 </p>
-<p>How is this possible? Robotics is going through a ground shift at the moment. Things that were almost impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a>, through its low cost open source project, made it possible for anyone with coding skills to experience this great shift themselves. I am grateful for having embarked on the journey. 
+<p>How is this possible? It's because the ground is shifting underneath robots. Things impossible yesterday become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a>, through its low cost open source project, made it possible for anyone with coding skills to experience this great shift in person. I am grateful for having embarked on the journey. 
 It's one of the greatest learning experiences for me. And I want to share it with you here.
 </p>
     
@@ -123,9 +123,10 @@ Agentic and autonomous robots are always facinating especially if you combine lo
 <i>The model was almost the same as the previous one except cameras were mounted on lekiwi, which enabled lekiwi to roam. And I didnt bother to train a locomotion model. I simply asked gemini to go around in a specific order to find legos.</i>
 <p>
 Seeing the success of bbox, I started to wonder whether images, which are the standard input to VLA, are really necessary in the presence of bbox? Could models do away with them? That led to the development of "Blind ACT".
+<i>(All X threads below have details and datasets)</i>
 </p>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Blind ACT - a poor man&#39;s IK<br><br>How do you like an ACT model that grasps like a pro, but is 4x as fast and invariant to scene changes?<br><br>The so100 in the demo is controlled by a policy that sees nothing. The image on the laptop is for humans to visualize. The robot acts blind. 1/n <a href="https://t.co/S8WgyAARyO">pic.twitter.com/S8WgyAARyO</a></p>&mdash; xun (@paszea) <a href="https://twitter.com/paszea/status/1924872831378358272?ref_src=twsrc%5Etfw">May 20, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<i>See X threads for details and datasets</i>
+
 <p>
 ACT without images trains 16x faster! It made a big difference in my experiment turnover while still providing precise control of the robot beheaviors. I further introduced 3D signals (bboxes from two images) in a model, and trained my robot arm to become an expert at stacking blocks.
 </p>
