--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <i><p style="color: #0b5394;">06/18/2025</p></i>
 <p>I know coding. But robots have always been a mystery to me. That started to change in April after I built the first robot arm that I have ever had my hands on. In the months that followed, I tinkered with it one project after another. And before long I found myself building demos I could have only dreamed of before April. 
 </p>
-<p>How is this possible? It's because the ground is shifting underneath robots. Things impossible yesterday become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a>, through its low cost open source project, made it possible for anyone with coding skills to experience this great shift in person. I am grateful for having embarked on the journey. 
+<p>How is this possible? It's possible because the ground is shifting rapidly underneath robots. Things impossible yesterday become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a>, through its low cost open source project, made it possible for anyone with coding skills to experience this great shift intimately. I am grateful for having embarked on the journey. 
 It's one of the greatest learning experiences for me. And I want to share it with you here.
 </p>
     
@@ -85,8 +85,8 @@ Having had a taste of success, I ordered more parts and upgraded so100 to a mobi
     <iframe width="325" height="560" src="https://www.youtube.com/embed/4a2rNi7PvBs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <i>The model combined locomotion and manipulation. It's much harder to train. Pi0 had a low success rate. And it didnt always follow instructions to go for the correct colored egg despite it's task-conditioned in training.
- Another interesting thing was that the model could not sit still. It consistently made small movements to the wheels that made it hard for the arm to manipulate.
-And N1 completely failed on this task.
+Another interesting problem of using model for locomotion is that the model could not stand still. The output actions always had some small movements to the wheels that made it hard for the arm to manipulate. That's why my later projects focused only on the arm.
+BTW N1 completely failed on this task.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Feaster_2">Dataset</a></i>
 <p>
 Challenges now escalated to games! And it gave me the first opportunity to use LLM in a robot project. I called Gemini to help robot come up with moves by giving it snapshots of the game board.
