--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>I know coding. But robots have always been a mystery to me. That started to change in April after I built the first robot arm that I have ever had my hands on. In the months that followed, I tinkered with it one project after another. And before long I found myself building demos I could have only dreamed of before April. 
 </p>
 <p>How is this possible? It's possible because the ground is shifting rapidly underneath robots. Things impossible yesterday become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a>, through its low cost open source project, made it possible for anyone with coding skills to experience this great shift intimately. I am grateful for having embarked on the journey. 
-It's one of the greatest learning experiences for me. And I want to share it with you here.
+It's one of the great learning experiences for me. And I want to share it with you here.
 </p>
     
 <h2>The journey starts</h2>
