--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@ Below is another zero-shot demo where Gemini figured out "a point in front of Ke
 </div>
 
 <p>
-Robotics was hard. I used to find it quite amusing watching pre-AI era robots playing soccer. They were epic clumsy. But things are changing fast. Impressive robot demos now pop up every day on Internet. 
+Robotics was hard. I used to find it quite amusing to watch pre-AI era robots playing soccer. They were epic clumsy. But things have changed fast. Impressive robot demos now pop up every day on Internet. 
     
-Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain dogs, dancig humanoids, you name it.
+Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain dogs, dancing humanoids, you name it.
 </p>
 <p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops and offices, helping perform all kinds of useful tasks. As I worked on these projects during the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
@@ -170,7 +170,7 @@ Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain do
 I'd really like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's truely a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
-And the end of this blog is certainly not the end of my robotics journey. It rather marks the start of the journey - there are so many more great ideas waiting to be explored.
+And the end of this blog is certainly not the end of my robotics journey. It rather marks the start of one. So many cool ideas are waiting to be explored. My journey will continue.
 
 </div>
 </body>
