--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
 <h1>A Software Engineer's Journey into Robotics</h1>
 
 <i><p style="color: #0b5394;">06/18/2025</p></i>
-<p>I know coding. But robots have always been a mystery to me. That started to change in April after I built my first robot arm so100. In the months that followed, I tinkered with it one project after another. Before long I found myself building demos I could only have dreamed of before April. 
+<p>I know coding. But robots have always been a mystery to me. That started to change in April after I built my first robot arm so100. In the months that followed, I tinkered with it, one project after another. Before long I found myself building demos I could only have dreamed of before April. 
 </p>
-<p>How is this possible? It's possible because the ground is shifting rapidly underneath robots. Things impossible yesterday become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a> made it possible for anyone with coding skills to experience this great shift intimately. I am grateful for having embarked on the journey. 
-It's one of the great learning experiences for me. And I want to share it with you here.
+<p>How is this possible? It's possible because the ground beneath robots is shifting rapidly these days. Things seemingly impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a> made it possible for anyone with coding skills to experience this great shift intimately. I am grateful for having embarked on the journey. 
+It's one of the great learning experiences for me. And I'd like to share it with you here.
 </p>
     
 <h2>The journey starts</h2>
-<p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
+<p>I trained my first VLA model, ACT, soon after the arm was built. It was a magic moment to watch a lifeless arm sprang into life seeking and grasping!
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/zxb1YeRxSYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>ACT is small, fast and effective. Unfortunately it needs cuda for training (on mac mps the loss blows up to inf/nan.) Google Colab is a cheap and convenient place to get cuda. I trained all my models there: ACT on L4, Pi0/Groot N1 on A100(40G).
+<i>ACT is small, fast and effective. Unfortunately it needs cuda for training (on mac mps the loss blows up to inf/nan.) Google Colab is a cheap and convenient place to get cuda gpus. I trained all my models there: ACT on L4, Pi0/Groot N1 on A100(40G).
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego">Dataset</a></i>
 
 <p>
-Eager for more, I quickly moved to a harder challenge: multi-lego pick-n-place. ACT couldn't cut it. But two other powerful models did. First Groot N1.
+Eager for more, I moved to a harder challenge: multi-lego pick-n-place. ACT couldn't cut it. But two other powerful models did. First Groot N1.
 </p>
 <div class="video-container">
     <iframe width="560" height="325" src="https://www.youtube.com/embed/dLe7exy6cZU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -70,13 +70,13 @@ Eager for more, I quickly moved to a harder challenge: multi-lego pick-n-place. 
 <i>One overhead camera. Finetuned for 20k steps (2 hours.) Pretty impressive it worked so well. I also finetuned Pi0 for 20k steps using the same data but couldn't get it to work nearly as well. Maybe I didn't train it long enough.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego_mix">Dataset</a></i>
 <p>
-Then Pi0. Pi0 was harder to train than N1 in some cases. But it performed better than N1 if you could get it to work. The arm was less shaky and more precise under Pi0.
+Then Pi0. Pi0 was harder to train than N1 in some cases like above. But it performed better than N1 if you could get it work. The arm was less shaky and more precise under Pi0.
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/JrbZqQxib5k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <i>This time with two cameras and trained for long (40k+ steps), Pi0 worked really well.
-Surprisingly N1 didn't do well in this 2 camera setting.
+Surprisingly N1 didn't do well in this 2-camera setting. Not sure why.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego_2cam">Dataset</a></i>
 <p>
 Having had a taste of success, I ordered more parts and upgraded so100 to a mobile LeKiwi. By Easter, I trained the LeKiwi to hunt for eggs using Pi0.
@@ -84,9 +84,9 @@ Having had a taste of success, I ordered more parts and upgraded so100 to a mobi
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/4a2rNi7PvBs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>The model combined locomotion and manipulation. It's much harder to train. Pi0 had a low success rate. And it didnt always follow instructions to go for the correct colored egg despite it's task-conditioned in training.
-Another interesting problem of using model for locomotion is that the model could not stand still. The output actions always had some small movements to the wheels that made it hard for the arm to manipulate. That's why my later projects focused only on the arm.
-Btw N1 completely failed on this task.
+<i>The model combined locomotion and manipulation. It's much harder to train. Pi0 could only achieve a low success rate. Also it didnt always follow instructions to go for the egg with the correct color despite it's task-conditioned in training.
+Another interesting problem of using model for locomotion is that the model could not stand still. The output actions always had some small movements to the wheels that made hard for the arm to manipulate. That's why my later projects focused only on the arm.
+Btw, N1 completely failed on this task.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Feaster_2">Dataset</a></i>
 <p>
 Challenges now escalated to games! And it gave me the first opportunity to use LLM in a robot project. I called Gemini to help robot come up with moves by giving it snapshots of the game board.
