--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ I've been reading robotics papers along the way. At this point, I came across a 
 In-context learning still requires a few demonstrations. Could we do better without any demonstrations, as some Gemini Robotics demos did, zero-shot? Zero-shot sounded nice!
 </p>
 <p>
-To get zero-shot, I first had the idea of developing a simplified IK model to move the robot's gripper to any given point in images. This simplified IK model was trained using data, not hand-crafted, and required no linear algebra or measurement. This X post explains how it's done.
+To get zero-shot, I first had the idea of developing a simplified IK model to move the robot's gripper to any given point in images. This simplified IK model was trained using data, not hand-crafted, and required no linear algebra or measurement. This X thread explains how it's done.
 </p>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">So100 costs $110. I has no fancy features. You control it by setting its 6-joint positions.<br><br>But you can develop a fancy feature, like a simplified IK to move the arm to an arbitrary position in images. See <a href="https://t.co/1ZzuOJEs4M">pic.twitter.com/1ZzuOJEs4M</a></p>&mdash; xun (@paszea) <a href="https://twitter.com/paszea/status/1932559764241994197?ref_src=twsrc%5Etfw">June 10, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -158,7 +158,7 @@ Below is another zero-shot demo where Gemini figured out "a point in front of Ke
 </div>
 
 <p>
-Robotics was hard. I used to find it quite amusing to watch pre-AI era robots playing soccer. They were epic clumsy. But things have changed fast. Impressive robot demos now pop up every day on Internet. 
+I used to find it quite amusing to watch pre-AI era robots playing soccer. They were epic clumsy. Robotics was hard. But things have been changing fast. Impressive robot demos now pop up every day on Internet. 
     
 Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain dogs, dancing humanoids, you name it.
 </p>
@@ -170,7 +170,7 @@ Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain do
 I'd really like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's truely a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
-And the end of this blog is certainly not the end of my robotics journey. It rather marks the start of one. So many cool ideas are waiting to be explored. My journey will continue.
+And the end of this blog is certainly not the end of my robotics journey. So many cool ideas are waiting to be explored. My journey just got started.
 
 </div>
 </body>
