--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Eager for more, I moved to a harder challenge: multi-lego pick-n-place. ACT coul
 <i>One overhead camera. Finetuned for 20k steps (2 hours.) Pretty impressive it worked so well. I also finetuned Pi0 for 20k steps using the same data but couldn't get it to work nearly as well. Maybe I didn't train it long enough.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego_mix">Dataset</a></i>
 <p>
-Then Pi0. Pi0 was harder to train than N1 in some cases like above. But it performed better than N1 if you could get it work. The arm was less shaky and more precise under Pi0.
+Then Pi0. Pi0 was harder to train than N1 in some cases like the above. But it performed better than N1 if you could get it work. The arm was less shaky and more precise under Pi0.
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/JrbZqQxib5k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
