--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ Having had a taste of success, I ordered more parts and upgraded so100 to a mobi
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/4a2rNi7PvBs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>The model combined locomotion and manipulation. It's much harder to train. Pi0 could only achieve a low success rate. Also it didnt always follow instructions to go for the egg with the correct color despite it's task-conditioned in training.
-Another interesting problem of using model for locomotion is that the model could not stand still. The output actions always had some small movements to the wheels that made hard for the arm to manipulate. That's why my later projects focused only on the arm.
+<i>The model combined locomotion and manipulation. It's much harder to train. Pi0 could only achieve a low success rate. Also it didnt always follow instructions to go for the egg of the correct color despite it's task-conditioned in training.
+Another interesting problem of using model for locomotion is that the model could not stand still. The output actions always had some small movements to the wheels that made it hard for the arm to manipulate. That's why my later projects focused only on the arm.
 Btw, N1 completely failed on this task.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Feaster_2">Dataset</a></i>
 <p>
