--- a/index.html
+++ b/index.html
@@ -151,23 +151,23 @@ With the help of the IK model and Gemini Live, I could finally have a "Hi Robot"
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/zeroshot?src=hash&amp;ref_src=twsrc%5Etfw">#zeroshot</a> <a href="https://twitter.com/hashtag/so100?src=hash&amp;ref_src=twsrc%5Etfw">#so100</a><br>A robot that talks too much and pauses too often, yet performs tasks Zero Shot. No demonstration needed.<br><br>1/ Put things in a plate <a href="https://t.co/2Z26c4XUI9">pic.twitter.com/2Z26c4XUI9</a></p>&mdash; xun (@paszea) <a href="https://twitter.com/paszea/status/1933280906137240010?ref_src=twsrc%5Etfw">June 12, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <p>
-Below is another zero-shot demo where Gemini figured out "a point in front of Kerby" to put the candy. By harvesting the power of a "System 2", it saved much of manual chores (teleoperation) for me.
+Below is another zero-shot demo where Gemini figured out "a point in front of Kerby" to put the candy. By harvesting the power of a "System 2", it saved much of the manual chores (teleoperation) for me.
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/vGwoSGFgL0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <p>
-I used to find it quite amusing to watch pre-AI era robots playing soccer. They were epic clumsy. Robotics was hard. But things have been changing fast. Impressive robot demos now pop up every day on Internet. 
+I used to find it quite amusing to watch pre-AI era robots playing soccer. They were epic clumsy. But things have been changing fast. Impressive robot demos now pop up every day on Internet. 
     
 Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain dogs, dancing humanoids, you name it.
 </p>
-<p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops and offices, helping perform all kinds of useful tasks. As I worked on these projects during the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
+<p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops, offices and factories, performing all types of useful tasks. As I worked on these projects in the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
 
 <h2>The journey continues</h2>
 <p>
-I'd really like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's truely a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
+I want to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
 And the end of this blog is certainly not the end of my robotics journey. So many cool ideas are waiting to be explored. My journey just got started.
