--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ I used to find it quite amusing to watch pre-AI era robots playing soccer. They 
     
 Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain dogs, dancing humanoids, you name it.
 </p>
-<p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops, offices and factories, performing all types of useful tasks. As I worked on these projects in the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
+<p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops, offices and factories, performing all types of useful tasks. As I worked on these projects in the past two and half months, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
 
 <h2>The journey continues</h2>
