--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain do
 I want to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
-And the end of this blog is certainly not the end of my robotics journey. So many cool ideas are waiting to be explored. My journey just got started.
+And the end of this blog is certainly not the end of my robotics journey. So many cool ideas are waiting to be explored. My journey has just got started.
 
 </div>
 </body>
