--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h1>A Software Engineer's Journey into Robotics</h1>
 
 <i><p style="color: #0b5394;">06/19/2025</p></i>
-<p>I know coding. But robots have always been a mystery to me. That started to change in April 2025 after I built my first robot arm so100. In the months that followed I tinkered with it, one project after another. Before long I found myself building demos I could have only dreamed of before April. 
+<p>I know coding. But robots have always been a mystery to me. That started to change in April 2025 after I built my first robot arm so100. In the months that followed I tinkered with it, one project after another. It wasn't long before I was able to build demos that were previously unimaginable to me.
 </p>
 <p>How could this be possible? The ground beneath robots is shifting rapidly these days. Things seemingly impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a> made it possible for anyone with coding skills to experience this shift intimately. I am grateful for having embarked on the journey. 
 It's one of the great learning experiences for me. And I'd like to share it with you here.
