--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <i><p style="color: #0b5394;">06/19/2025</p></i>
 <p>I know how to code. But robots have always been a mystery to me. That started to change in April 2025 after I built my first robot arm so100. In the months that followed I tinkered with it, one project after another. It wasn't long before I was able to build demos that were previously unimaginable to me.
 </p>
-<p>How could this be possible? The ground beneath robots is shifting rapidly these days. Things seemingly impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a> made it possible for anyone with coding skills to experience this shift intimately. I am grateful for having embarked on the journey. 
+<p>How could this be possible? The ground beneath robotics is shifting rapidly these days. Things seemingly impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobot</a> made it possible for anyone with coding skills to experience this shift intimately. I am grateful for having embarked on the journey. 
 It's one of the great learning experiences for me. And I'd like to share it with you here.
 </p>
     
