--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>I know how to code. But robots have always been a mystery to me. That started to change in April 2025 after I built my first robot arm so100. In the months that followed I kept experimenting, one project after another. It wasn't long before I was able to build demos that were previously unimaginable to me.
 </p>
 <p>How could this be possible? The ground of robotics is shifting rapidly. Things seemingly impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobotHF</a> made it possible for anyone with coding skills to experience this shift firsthand. I am grateful for having embarked on the journey. 
-I'd like to share this great learning experience with you.
+It's a great learning experience I'd like to share with you.
 </p>
     
 <h2>The journey starts</h2>
