--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>I know how to code. But robots have always been a mystery to me. That started to change in April 2025 after I built my first robot arm so100. In the months that followed I tinkered and experimented, one project after another. It wasn't long before I was able to build demos that were previously unimaginable to me.
 </p>
 <p>The ground of robotics is shifting. Things seemingly impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobotHF</a> made it easy for anyone with coding skills to explore this shift firsthand. 
-I am grateful for taking a journey into robotics. It was a great experience full of learning and fun.
+I am grateful that I took the journey. It was a great experience full of learning and fun.
 </p>
     
 <h2>The journey starts</h2>
