--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h1>A Software Engineer's Journey into Robotics</h1>
 
 <i><p style="color: #0b5394;">06/19/2025</p></i>
-<p>I know how to code. But robots have always been a mystery to me. That started to change in April 2025 after I built my first robot arm so100. In the months that followed I tinkered and experimented, one project after another. It wasn't long before I was able to build demos that were previously unimaginable to me.
+<p>I know how to code. But robots have always been a mystery to me. That started to change in April 2025 after I built my first robot arm so100. In the months that followed I tinkered and experimented. It wasn't long before I was able to build demos that were previously unimaginable to me.
 </p>
 <p>The ground of robotics is shifting. Things seemingly impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobotHF</a> made it easy for anyone with coding skills to explore this shift firsthand. 
 I am grateful that I took the journey. It was a great experience full of learning and fun.
