--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ I am grateful that I took the journey. It was a great experience full of learnin
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego">Dataset</a></i>
 
 <p>
-Eager for more, I moved to a harder challenge: multi-lego pick-n-place. ACT couldn't cut it. But two other powerful models did. First Groot N1.
+Eager for more, I moved to a harder challenge: multi-lego pick-n-place. ACT couldn't cut it. But two powerful models did. First Groot N1.
 </p>
 <div class="video-container">
     <iframe width="560" height="325" src="https://www.youtube.com/embed/dLe7exy6cZU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
