--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Then Pi0. Pi0 was harder to train than N1 in some cases like the above. But it p
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/JrbZqQxib5k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>This time with two cameras and trained for long (40k+ steps), Pi0 worked really well.
+<i>This time with two cameras (front & wrist) and trained for long (40k+ steps), Pi0 worked really well.
 Surprisingly N1 didn't do well in this 2-camera setting. Not sure why.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego_2cam">Dataset</a></i>
 <p>
