--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Below is another zero-shot demo where Gemini figured out "a point in front of Ke
 </div>
 
 <p>
-I used to find it quite amusing to watch pre-AI era robots playing soccer. They were epically clumsy. But things have been changing fast. Impressive robot demos now pop up every day on Internet. 
+I used to find it quite amusing to watch pre-LLM era robots playing soccer. They were epically clumsy. But things have been changing fast. Impressive robot demos now pop up every day on Internet. 
     
 Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain dogs, dancing humanoids, you name it.
 </p>
