--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@ As I worked on these projects in the past two and half months, I couldn't help b
 
 <h2>The journey continues</h2>
 <p>
-I want to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
+I want to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobotHF</a> team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
-And the end of this blog is certainly not the end of my robotics journey. So many cool ideas are waiting to be explored. My journey has just got started.
+And the end of this post is certainly not the end of my robotics journey. It's rather the start. There are so many cool ideas waiting to be explored. 
 
 </div>
 </body>
