--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <i><p style="color: #0b5394;">06/19/2025</p></i>
 <p>I know how to code. But robots have always been a mystery to me. That changed in April 2025 after I built my first robot arm so100. In the months that followed I tinkered and experimented. Before long I was building demos that were previously unimaginable to me.
 </p>
-<p>What's going on? Robotics is undergoing a ground shift. Things seemingly impossible a few years ago become easy today. And <a href="https://github.com/huggingface/lerobot">LeRobotHF</a> made it easy for anyone with coding skills to experience this shift firsthand. 
+<p>What's going on? Robotics is undergoing a ground shift. Things seemingly impossible a few years ago become very solvable today. And <a href="https://github.com/huggingface/lerobot">LeRobotHF</a> made it easy for anyone with coding skills to experience this shift firsthand. 
 I am grateful that I did. It was a great learning experience full of fun.
 </p>
     
